feat: add new files and update cmake configuration
* Resolved braking change in previous commit #3eb1283
* Remove fmt library  dependency due to extenteded configuration build
  time & errors
* Added data types class
* minor change in conole main executable

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -6,6 +6,7 @@
 	Description:
 	CMake configuration for xamp library compiled as object file
 ]]
+# Global binary name
 set(LIBRARY_BINARY "xamp_library")
 
 list(APPEND CMAKE_MESSAGE_CONTEXT "${LIBRARY_BINARY}")
